# oop-labs

./: .gitignore
lab3/: CMakeLists.txt  main.cpp  run.sh  shapetype.h  sigmo2
lab3/app/: CMakeLists.txt  main.cpp
lab3/app/canvas/: canvas.cpp  canvas.h  mousetype.h
lab3/app/container/: container.cpp  container.h
lab3/app/factories/: factoryshape.cpp  factoryshape.h
lab3/app/factory/: factory.cpp  factory.h
lab3/app/loader/: loaderfromfile.cpp  loaderfromfile.h
lab3/app/treeshapeview/: treeshapeview.cpp  treeshapeview.h
lab3/canvas/: canvas.cpp  canvas.h
lab3/circle/: circle.cpp  circle.h
lab3/commands/: changecolorcommand.cpp  changecolorcommand.h  command.h  createcommand.cpp  createcommand.h  groupcommand.cpp  groupcommand.h  movecommand.cpp  movecommand.h  resizecommand.cpp  resizecommand.h  ungroupcommand.cpp  ungroupcommand.h
lab3/container/: container.cpp  container.h
lab3/ellipse/: ellipse.cpp  ellipse.h
lab3/factory/: factory.cpp  factory.h
lab3/rectangle/: rectangle.cpp  rectangle.h
lab3/shape/: shape.h
lab3/shapegroup/: shapegroup.cpp  shapegroup.h
lab3/square/: square.h
lab3/src/commands/: CMakeLists.txt  changecolorcommand.cpp  changecolorcommand.h  createcommand.cpp  createcommand.h  deletecommand.cpp  deletecommand.h  groupcommand.cpp  groupcommand.h  linkcommand.cpp  linkcommand.h  movecommand.cpp  movecommand.h  multiplecommand.cpp  multiplecommand.h  resizecommand.cpp  ungroupcommand.cpp  ungroupcommand.h  unlinkcommand.cpp  unlinkcommand.h
lab3/src/interfaces/: CMakeLists.txt  command.h  drawable.h  factory.h  observer.h  shape.h  shapetype.h
lab3/src/shapes/arrowlink/: CMakeLists.txt  arrowlink.cpp  arrowlink.h
lab3/src/shapes/circle/: CMakeLists.txt  circle.h
lab3/src/shapes/ellipse/: CMakeLists.txt  ellipse.cpp  ellipse.h
lab3/src/shapes/rectangle/: CMakeLists.txt  rectangle.cpp  rectangle.h
lab3/src/shapes/shapegroup/: CMakeLists.txt  shapegroup.cpp  shapegroup.h
lab3/src/shapes/square/: CMakeLists.txt  square.h
lab3/src/shapes/triangle/: CMakeLists.txt  triangle.cpp  triangle.h
lab3/triangle/: triangle.cpp  triangle.h
lab32/: CMakeLists.txt  main.cpp  run.sh
lab32/model/: model.cpp  model.h
lab32/view/: view.cpp  view.h
lab5/: check_main.cpp  main.cpp  run.sh  run2.sh  testobject.h
lab5/apple/: apple.cpp  apple.h
lab5/base/: base.h
lab5/desc/: desc.h
lab5/fruit/: fruit.cpp  fruit.h
lab5/mandarin/: mandarin.cpp  mandarin.h
laba1/: CMakeLists.txt  main.cpp  myButton.cpp  myButton.h  myWidget.cpp  myWidget.h  run.bat  run.txt
laba2/: main.cpp
laba2/area/: area.cpp  parea.cpp
laba2/building/: build.cpp  build.h  building.cpp  building.h
laba2/residentialbuilding/: resbuild.cpp  resbuild.h
